@@ -1,3 +1,12 @@
+2000-04-17 19:45 GMT-4 David G. Holm <dholm@jsd-llc.com>
+  * include/hbapirdd.h
+  * source/rdd/dbfcdx/dbfcdx1.c
+    ! Renamed _PAGEINFO to HB_PAGEINFO_STRU and renamed PAGEINFO to
+      HB_PAGEINFO, because both _PAGEINFO and PAGEINFO are used by
+      IBM's VisualAge C++ for completely different structures (this
+      type of namespace collision is a prime example of why some of
+      us keep insisting that the HB_ prefix should always be used).
+
 20000417-23:01 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
 
    * source/common/hbtrace.c
